--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Materias Aprobadas</title>
   <link rel="stylesheet" href="styles.css">
-
 </head>
 <body>
   <header class="site-header">
@@ -15,22 +14,31 @@
 
   <main class="grid">
     <article class="card">
+      <figure><img src="img/programacion.jpg" alt="Programación estructurada I"></figure>
       <h2>Programacion estructurada I</h2>
       <p>Fundamentos de algoritmos y estructuras de control. Práctica con problemas básicos.</p>
     </article>
+
     <article class="card">
+      <figure><img src="img/matematica.jpg" alt="Desarrollo del pensamiento matemático y algebraico"></figure>
       <h2>Desarrollo del pensamiento matematico y algebraico</h2>
       <p>Límites, derivadas e introducción a aplicaciones de la derivada.</p>
     </article>
+
     <article class="card">
+      <figure><img src="img/basededatos.jpg" alt="Desarrollo de funciones de base de datos"></figure>
       <h2>Desarrollo de funciones de base de datos</h2>
       <p>Desarrollo de procesos almacenados, triggers y mas en sql.</p>
     </article>
+
     <article class="card">
+      <figure><img src="img/ingles.jpg" alt="Inglés"></figure>
       <h2>Ingles</h2>
       <p>Estructura, conversaciones, vocabulario, verbo to be.</p>
     </article>
+
     <article class="card">
+      <figure><img src="img/filosofia.jpg" alt="Filosofía"></figure>
       <h2>Filosofia</h2>
       <p>El arte de pensar.</p>
     </article>
